# MOPS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  env.sh  mpas.yaml  pathLine.py
.cache/clangd/index/: GeoConverter.hpp.D42D990D8B5390A6.idx  ImageBuffer.hpp.B58B0F63319685F2.idx  Interpolation.hpp.1C1B1B90AF1D0B24.idx  KDTree.cpp.721677CA00CCF9AC.idx  KDTree.h.144A43F9DF2AF9D8.idx  Log.hpp.16021BF113F3F77C.idx  MOPS.cpp.995FB30B5E472413.idx  MOPS.h.CDD5F79D459E8E95.idx  MOPSApp.cpp.DAE4E9DCC29FFC1D.idx  MOPSApp.h.A7C16131E3359CEA.idx  MPASOField.cpp.C4CF298899FCADD8.idx  MPASOField.h.E8F6BB5E057487CB.idx  MPASOGrid.cpp.59390C0BF60196E1.idx  MPASOGrid.h.D11F1CA9BE85BA17.idx  MPASOReader.cpp.02E38B25F2D8E19B.idx  MPASOReader.h.CAEE05A770EB8D48.idx  MPASOSolution.cpp.C46AF103D4FAB804.idx  MPASOSolution.h.74F77015D9C2B66D.idx  MPASOVisualizer.cpp.D9094EFE33C372A8.idx  MPASOVisualizer.h.8707385124CA3E96.idx  SYCLKernel.cpp.9985616B2025FC55.idx  SYCLKernel.h.7374B01E1FD6123A.idx  Utils.hpp.9CB67123F307ACFE.idx  attr.h.B9B87CE4D3D37B5E.idx  binary.h.3A6C8C7C086D19B0.idx  bindings.cpp.BB6E790A362C76F4.idx  buffer_info.h.FC95C7BB5FED621A.idx  cast.h.F9D122C458A1AB12.idx  class.h.BD404A1D25155B37.idx  common.h.928F68F3A8CFB360.idx  complex.h.EFFAF6551EA68D23.idx  config.hh.A0538A0178FCFB3D.idx  convert.h.CAF14BABCF9CC03A.idx  cpp_conduit.h.7EBA093D243808DB.idx  cxxopts.hpp.C8E07C28375402E9.idx  descr.h.E5B1BD4DF6A85F40.idx  device.hh.83A15506F5759505.idx  dll.h.F8895A83129A1F31.idx  dynamic_raw_ptr_cast_if_possible.h.494193708B974B9B.idx  emit.h.954F9FCA73FD167B.idx  (+70 more)
.github/workflows/: ci.yml
Agent/: example_natural_language.py  llm_task_agent.py  task_templates.py  test_auto_yaml.py  test_yaml_generation.py
CLI/: main.cpp  main_cp_path_rk4_h_res_data  main_cp_streamline
cmake/: MOPSConfig.cmake.in
example/: CMakeLists.copy  CMakeLists.txt  README.md  main.cpp
frontend/: __init__.py  app.js  backend_server.py  index.html  pathline-deckgl.html  pathline-loader.js  requirements.txt  start_server.sh  styles.css  test_image_selection.py
include/: Command.hpp  GeoConverter.hpp  ImageBuffer.hpp  Interpolation.hpp  KDTree.h  Log.hpp  MOPSApp.h  MPASOField.h  MPASOGrid.h  MPASOReader.h  MPASOSolution.h  MPASOVisualizer.h  SYCLKernel.h  Utils.hpp  VTKFileManager.hpp  ggl.h
include/api/: MOPS.h
script/: compile.sh  compiler_cuda.sh  compiler_hip.sh  compiler_sycl.sh  compiler_tbb.sh  download.lua  setSYCL.sh
src/: KDTree.cpp  MOPS.cpp  MOPSApp.cpp  MPASOField.cpp  MPASOGrid.cpp  MPASOReader.cpp  MPASOSolution.cpp  MPASOVisualizer.cpp  SYCLKernel.cpp  copyback  main.cpp  tsc  version.h.in
src/CPU/Common/: CPUFactory.cpp  CPUFactory.h
src/CPU/TBB/: MPASOSolutionTBB.cpp  MPASOSolutionTBB.h  MPASOVisualizerTBB.cpp  MPASOVisualizerTBB.h
src/CPU/TBB/Kernel/: MPASOVisualizerKernels.cpp  MPASOVisualizerKernels.h  TBBKernel.cpp  TBBKernel.h
src/Common/: CommonUtils.h  ImageBuffer.hpp  MOPSFactory.cpp  MOPSFactory.h  TrajectoryCommon.h
src/Core/: CPUContext.h  GPUContext.h  MOPS.cpp  MOPSApp.cpp  MOPSApp.h  MPASOField.cpp  MPASOField.h  MPASOGrid.cpp  MPASOGrid.h  MPASOReader.cpp  MPASOReader.h  MPASOSolution.cpp  MPASOSolution.h  MPASOVisualizer.cpp  MPASOVisualizer.h  RuntimeContext.h
src/GPU/CUDA/: MPASOSolutionCUDA.cpp  MPASOSolutionCUDA.h  MPASOVisualizerCUDA.cpp  MPASOVisualizerCUDA.h
src/GPU/CUDA/Kernel/: CUDAKernel.cu  CUDAKernel.h  MPASOSolutionKernels.cpp  MPASOSolutionKernels.cu  MPASOSolutionKernels.h  MPASOVisualizerKernels.cu  MPASOVisualizerKernels.h
src/GPU/Common/: GPUFactory.cpp  GPUFactory.h
src/GPU/HIP/: MPASOSolutionHIP.cpp  MPASOSolutionHIP.h  MPASOVisualizerHIP.cpp  MPASOVisualizerHIP.h
src/GPU/HIP/Kernel/: HIPKernel.cpp  HIPKernel.cu  HIPKernel.h  MPASOSolutionKernels.cpp  MPASOSolutionKernels.cu  MPASOSolutionKernels.h  MPASOVisualizerKernels.cu  MPASOVisualizerKernels.h
src/GPU/SYCL/: MPASOSolutionSYCL.cpp  MPASOSolutionSYCL.h  MPASOVisualizerSYCL.cpp  MPASOVisualizerSYCL.h
src/GPU/SYCL/Kernel/: SYCLKernel.cpp  SYCLKernel.h
src/IO/: MPASOReader.cpp  MPASOReader.h  VTKFileManager.hpp
src/SYCL/: ImageBuffer.hpp  SYCLKernel.cpp  SYCLKernel.h
src/Utils/: BackendCompat.hpp  GeoConverter.hpp  Interpolation.hpp  KDTree.cpp  KDTree.h  Log.hpp  ScopedStderrSilence.hpp  Timer.hpp  Utils.hpp  YamlGen.hpp  impl.cpp
src/Utils/CUDACommon/: multithreading.cpp
test/: CMakeLists.txt  demo.py  mops_env.yml  test_env.cpp  test_gaussian.cpp  test_gausss.cpp  test_grid.cpp  test_io.cpp  test_rbf.cpp  test_trajector.cpp  vis.py
tools/pyMOPS/: CMakeLists.txt  README.md  bindings.cpp  setup.py
tools/pyMOPS/pyMOPS/: test.py
tools/pyMOPS/pyMOPS.egg-info/: PKG-INFO
tools/tools/pyMOPS/pyMOPS/: __init__.py
tools/tools/pyMOPS/pyMOPS.egg-info/: SOURCES.txt  top_level.txt
tutorial/: CMakeLists.txt  MOPS_demo.ipynb  binReader.py  export_pathline_binary.py  main.cpp  pathLine.cpp  pathLine.py  pyMOPSAPI.py  reGrid.cpp  reGrid.py  reMapping.cpp  reMapping.py  streamLine.cpp  streamLine.py  test.yaml
